@@ -2,25 +2,58 @@ package io.github.orionlibs.orion_digital_twin.connector;
 
 import io.github.orionlibs.orion_json.JSONService;
 import java.io.IOException;
+import java.util.Collections;
 import java.util.List;
 import java.util.Map;
 
 public class ConnectorConfigurationService
 {
-    public static List<String> configure(String configAsJSON, String filePathToSaveConfig)
+    private Map<Object, Object> config;
+    private ConnectorConfigurator configurator;
+
+
+    public List<String> configureAndSaveToFile(String configAsJSON, String filePathToSaveConfig)
     {
-        Map<Object, Object> config = JSONService.convertJSONToMap(configAsJSON);
+        extractAndValidate(configAsJSON);
+        if(configurator != null)
+        {
+            try
+            {
+                configurator.storeToFile(filePathToSaveConfig);
+            }
+            catch(IOException e)
+            {
+                return List.of(e.getMessage());
+            }
+        }
+        return Collections.emptyList();
+    }
+
+
+    public List<String> configureAndSaveToDatabase(String configAsJSON)
+    {
+        extractAndValidate(configAsJSON);
+        if(configurator != null)
+        {
+            configurator.storeToDatabase();
+        }
+        return Collections.emptyList();
+    }
+
+
+    private List<String> extractAndValidate(String configAsJSON)
+    {
+        this.config = JSONService.convertJSONToMap(configAsJSON);
         if(config != null)
         {
             String dataSourceType = (String)config.get("dataSourceType");
-            ConnectorConfigurator configurator = null;
             if(DataSourceType.HttpApi.get().equals(dataSourceType))
             {
-                configurator = new HttpApiConnectorConfigurator(config);
+                this.configurator = new HttpApiConnectorConfigurator(config);
             }
             else if(DataSourceType.Mqtt.get().equals(dataSourceType))
             {
-                configurator = new MqttConnectorConfigurator(config);
+                this.configurator = new MqttConnectorConfigurator(config);
             }
             if(configurator != null)
             {
@@ -29,16 +62,8 @@ public class ConnectorConfigurationService
                 {
                     return errorWrapper.errors;
                 }
-                try
-                {
-                    configurator.storeToFile(filePathToSaveConfig);
-                }
-                catch(IOException e)
-                {
-                    return List.of(e.getMessage());
-                }
             }
         }
-        return List.of();
+        return Collections.emptyList();
     }
 }
